; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_crash_dump.c_get_memory_layout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_crash_dump.c_get_memory_layout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_chunk = type { i32 }

@MEMORY_CHUNKS = common dso_local global i32 0, align 4
@OLDMEM_BASE = common dso_local global i32 0, align 4
@OLDMEM_SIZE = common dso_local global i32 0, align 4
@CHUNK_CRASHK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mem_chunk* ()* @get_memory_layout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mem_chunk* @get_memory_layout() #0 {
  %1 = alloca %struct.mem_chunk*, align 8
  %2 = load i32, i32* @MEMORY_CHUNKS, align 4
  %3 = sext i32 %2 to i64
  %4 = mul i64 %3, 4
  %5 = trunc i64 %4 to i32
  %6 = call %struct.mem_chunk* @kzalloc_panic(i32 %5)
  store %struct.mem_chunk* %6, %struct.mem_chunk** %1, align 8
  %7 = load %struct.mem_chunk*, %struct.mem_chunk** %1, align 8
  %8 = call i32 @detect_memory_layout(%struct.mem_chunk* %7)
  %9 = load %struct.mem_chunk*, %struct.mem_chunk** %1, align 8
  %10 = load i32, i32* @OLDMEM_BASE, align 4
  %11 = load i32, i32* @OLDMEM_SIZE, align 4
  %12 = load i32, i32* @CHUNK_CRASHK, align 4
  %13 = call i32 @create_mem_hole(%struct.mem_chunk* %9, i32 %10, i32 %11, i32 %12)
  %14 = load %struct.mem_chunk*, %struct.mem_chunk** %1, align 8
  ret %struct.mem_chunk* %14
}

declare dso_local %struct.mem_chunk* @kzalloc_panic(i32) #1

declare dso_local i32 @detect_memory_layout(%struct.mem_chunk*) #1

declare dso_local i32 @create_mem_hole(%struct.mem_chunk*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
